# precin-crawler

./: README.md  pyproject.toml
precincrawler/: scrapy.cfg
precincrawler/precincrawler/: items.py  middlewares.py  pipelines.py  settings.py
precincrawler/precincrawler/spiders/: auxiliadora.py
