[tool.poetry]
name = "precin-crawler"
version = "0.1.0"
description = "crawler to extract features for precin analytics and model"
authors = ["João Pedro Chagas <jpchagas@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
